--- a/members/index.html
+++ b/members/index.html
@@ -1,5 +1,5 @@
 ---
-title: Fraser Lab Members
+title: Wang Lab Members
 layout: members
 group: members
 ---
@@ -32,8 +32,8 @@ The Fraser lab welcomes people of any race, ethnicity, religion, national origin
                   <a href="http://www.linkedin.com"><img class="inline-block mem-icon" src="/static/img/lin_logo.svg"></a>
                   <a href= "http://www.linkedin.com/in/{{member.linkedin}}"> {{member.linkedin}} </a> <br>
                 {% endif %}
-                {% if member.UCSF %}
-                  <a href="http://www.ucsf.edu"><img class="inline-block mem-icon" src="/static/img/ucsf_logo_black.svg"></a>
+                {% if member.ZJU %}
+                  <a href="https://www.zju.edu.cn/"><img class="inline-block mem-icon" src="/static/img/ZJUlogo.png"></a>
                   <a href= "http://profiles.ucsf.edu/{{member.UCSF}}"> Profile </a> <br>
                 {% endif %}
                 {% if member.scholar %}
