--- a/publications/index.html
+++ b/publications/index.html
@@ -7,6 +7,8 @@ group: publications
 <h1>Publications</h1>
 <div class="container-fluid">
 
+        See my full Publication at [Google Scholar](https://scholar.google.dk/citations?hl=en&user=LblGaZMAAAAJ&view_op=list_works&sortby=pubdate)
+        
 {% for publication in site.publications reversed %}
         <hr>
         <div class="row" style="padding-top: 60px; margin-top: -60px;" id="{{publication.pmid}}">
