--- a/publications/index.html
+++ b/publications/index.html
@@ -5,6 +5,7 @@ group: publications
 ---
 
 <h1>Publications</h1>
+Blablabla
 <div class="container-fluid">
 
         See my full Publication at [Google Scholar](https://scholar.google.dk/citations?hl=en&user=LblGaZMAAAAJ&view_op=list_works&sortby=pubdate)
