--- a/publications/index.html
+++ b/publications/index.html
@@ -1,14 +1,13 @@
 ---
-title: Publications from the Fraser Lab
+title: Publications from the Wang Lab
 layout: default
 group: publications
 ---
 
 <h1>Publications</h1>
-Blablabla
 <div class="container-fluid">
 
-        See my full Publication at [Google Scholar](https://scholar.google.dk/citations?hl=en&user=LblGaZMAAAAJ&view_op=list_works&sortby=pubdate)
+See my full Publication at [Google Scholar](https://scholar.google.dk/citations?hl=en&user=LblGaZMAAAAJ&view_op=list_works&sortby=pubdate)
         
 {% for publication in site.publications reversed %}
         <hr>
