--- a/publications/index.html
+++ b/publications/index.html
@@ -7,7 +7,7 @@ group: publications
 <h1>Publications</h1>
 <div class="container-fluid">
 
-See my full Publication at [Google Scholar](https://scholar.google.dk/citations?hl=en&user=LblGaZMAAAAJ&view_op=list_works&sortby=pubdate)
+See my full Publication at <a href= "https://scholar.google.dk/citations?hl=en&user=LblGaZMAAAAJ&view_op=list_works&sortby=pubdate"> Google Scholar </a> <br>
         
 {% for publication in site.publications reversed %}
         <hr>
