--- a/publications/index.html
+++ b/publications/index.html
@@ -4,6 +4,9 @@ layout: default
 group: publications
 ---
 
+I am definitely in the correct HTML editor mode as this is <b>enboldened</b> and this is <span id='blue'>blue</span>.
+<script type="text/javascript">document.getElementById("blue").style.color = "blue";</script>
+
 <h1>Publications</h1>
 <div class="container-fluid">
 
