--- a/publications/index.html
+++ b/publications/index.html
@@ -7,6 +7,14 @@ group: publications
 I am definitely in the correct HTML editor mode as this is <b>enboldened</b> and this is <span id='blue'>blue</span>.
 <script type="text/javascript">document.getElementById("blue").style.color = "blue";</script>
 
+<div id="viewport" role="NGL" data-proteins='[{"type": "data", "value": "mike_combined", "isVariable": true, "loadFx": "loadmike_combined"}]' data-backgroundcolor="white"></div>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"
+			  integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+			  crossorigin="anonymous" type="text/javascript"></script>
+<script src="https://unpkg.com/ngl@2.0.0-dev.34/dist/ngl.js" type="text/javascript"></script>
+   <script src="https://michelanglo.sgc.ox.ac.uk/michelanglo.js" type="text/javascript"></script>
+<script src="https://michelanglo.sgc.ox.ac.uk/michelanglo_menu.js" type="text/javascript"></script>
+
 <h1>Publications</h1>
 <div class="container-fluid">
 
