--- a/publications/index.html
+++ b/publications/index.html
@@ -51,6 +51,43 @@ function loadmike_combined (protein) {
 
 </script>
 
+<h2>Description</h2>
+<p>Editable text. press pen to edit (permissions permitting).</p>
+<p>Unedited pages are deleted after a month, while other pages are deleted if unopened within a year.</p>
+<h3>peptide and nucleic acid chains</h3>
+<ul>
+<li><span class="prolink" data-toggle="protein" data-target="viewport" data-focus="domain" data-selection="9-499:A">9-499:A</span></li>
+<li><span class="prolink" data-toggle="protein" data-target="viewport" data-focus="domain" data-selection="29-501:B">29-501:B</span></li>
+</ul>
+<h3>ligands</h3>
+<ul>
+<li><span class="prolink" data-toggle="protein" data-target="viewport" data-focus="residue" data-selection="MPD and :A">MPD and :A</span></li>
+<li><span class="prolink" data-toggle="protein" data-target="viewport" data-focus="residue" data-selection="NA and :B">NA and :B</span></li>
+<li><span class="prolink" data-toggle="protein" data-target="viewport" data-focus="residue" data-selection="NA and :A">NA and :A</span></li>
+<li><span class="prolink" data-toggle="protein" data-target="viewport" data-focus="residue" data-selection="MPD and :B">MPD and :B</span></li>
+</ul>
+
+<style>
+    .prolink {
+	color: mediumseagreen;
+    }
+
+    .prolink:hover {
+        color: seagreen;
+        cursor: pointer;
+        text-decoration: underline;
+    }
+</style>
+
+
+
+
+
+
+
+
+
+
 <h1>Publications</h1>
 <div class="container-fluid">
 
