--- a/publications/index.html
+++ b/publications/index.html
@@ -4,6 +4,8 @@ layout: default
 group: publications
 ---
 
+{% include carousel.html height="40" unit="%" duration="5" filter="img/pub/" controlposition="90%" indicatorposition="90%" %}
+
 
 <h1>Publications</h1>
 <div class="container-fluid">
