--- a/research/index.html
+++ b/research/index.html
@@ -1,10 +1,12 @@
+---
+title: Research in the Wang Lab
+layout: default
+group: research
+---
 
-<!DOCTYPE HTML>
-<!--
-	Standout by Pixelarity
-	pixelarity.com | hello@pixelarity.com
-	License: pixelarity.com/license
--->
+
+<img class="img-fluid" src="/static/img/Frontpage_1920x400.jpg" title="This wonderful illustration was courtesy of Wei Chen" alt="Lab Group Illustration (credit Wei Chen)">
+
 <html>
 	<head>
 		<title>Matteo Aldeghi - Research</title>
